--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -4,7 +4,7 @@
         <input type="text" placeholder="username" name="name" [(ngModel)]="user.name"/>
         <input type="password" placeholder="password" name="password" [(ngModel)]="user.password"/>
          <input type="submit" value="SIGN IN" id="submit">
-        <p class="message">Not registered? <a href="#">Create an account</a></p>
+        <p class="message">Not registered? <a href="signup">Create an account</a></p>
       </form>
     </div>
   </div>
