--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -5,9 +5,8 @@
 		<h1>Creative SignUp Form</h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
-                
-				<form  (ngSubmit)="onSubmit()">
-					<input class="text" type="text"   [(ngModel)]="user.name" name="name" placeholder="Username" required="">
+    			<form  (ngSubmit)="onSubmit()">
+					<input class="text" type="text"   [(ngModel)]="user.name" name="Username" placeholder="Username" required="">
 					<input class="text email" type="email" name="email" [(ngModel)]="user.email" placeholder="Email" required="">
 					<input class="text" type="password" name="password"  [(ngModel)]="user.password" placeholder="Password" required="">
 					<input class="text w3lpass" type="password" name="Confirmpassword"  [(ngModel)]="user.Confirmpassword" placeholder="Confirm Password" required="">
@@ -18,9 +17,9 @@
 						</label>
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="SIGNUP">
+					<input type="submit" value="SIGN UP">
 				</form>
-				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="/signin" > Login Now!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
