--- a/src/app/pages/client/detail/detail.component.html
+++ b/src/app/pages/client/detail/detail.component.html
@@ -1,10 +1,10 @@
 <div class="text-blue-600 container mx-auto mt-3 mb-6">
-    Trang chủ / Điện thoại / OPPO
+    Trang chủ / Điện thoại / {{product.name}}
 </div>
 <div class="container mx-auto">
     <div class="flex justify-between items-center">
         <h1 class="text-2xl font-semibold">
-            OPPO A77s 8GB-128GB
+            {{product.name}}
         </h1>
         <div>
             <span>
@@ -22,7 +22,7 @@
                 0 hỏi đáp
             </a>
 
-            <a href="" class="text-[#007aff]">
+            <a href="" class="text-[#007aff]" *ngIf="product.canCompare">
                 <i class="fa-solid fa-circle-plus"></i>
                 So sánh
             </a>
@@ -99,7 +99,7 @@
         <div class="right w-1/2">
             <div class="flex justify-between">
                 <h1 class="text-3xl font-semibold text-red-700">
-                    6.290.000₫
+                    {{product.price}}đ
                 </h1>
                 <div class="text-sm text-right">
                     Trả góp chỉ từ <br>
@@ -149,7 +149,7 @@
                 </a>
             </div>
             <div class="p-2 border border-solid border-gray-300 rounded-md my-5">
-                <a href="">Mua hàng cũ: OPPO A77s 8GB-128GB</a>
+                <a href="">Mua hàng cũ: {{product.name}}</a>
                 <p>Giá từ: <span class="text-red-600">4.180.000₫</span></p>
             </div>
         </div>
@@ -159,18 +159,14 @@
     <article class="flex justify-between">
         <div class="w-[60%] p-3 border rounded-md shadow-sm">
             <h1 class="text-2xl">
-                Đặc điểm nổi bật của OPPO A77s 8GB-128GB
+                Đặc điểm nổi bật của {{product.name}}
             </h1>
             <img src="https://i.imgur.com/0baWV4e.jpg" alt="">
             <h1 class="text-2xl text-center">
-                Đánh giá chi tiết OPPO A77s 8GB-128GB
+                Đánh giá chi tiết {{product.name}}
             </h1>
             <b>
-                Cuộc sống trở nên thú vị hơn khi có người bạn đồng hành trẻ trung, năng động – OPPO A77s. Chiếc điện
-                thoại tầm trung với thiết kế hiện đại, tươi trẻ đi cùng những công nghệ ấn tượng như camera kép AI 50MP,
-                sạc nhanh 33W, Snapdragon 680 và hỗ trợ mở rộng RAM...
-
-
+                {{product.description}}
             </b>
             <img src="https://i.imgur.com/yyRk2Rc.jpg" alt="">
             <button class="bg-blue-300 text-white p-1 rounded-md my-2">Xem thêm</button>
