--- a/src/app/pages/client/product/product.component.html
+++ b/src/app/pages/client/product/product.component.html
@@ -1,20 +1,20 @@
 <section class="container-xxl mt-3 mb-3">
     <h2>Điện thoại nổi bật</h2>
     <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col" *ngFor="let item of product">
+        <div class="col" *ngFor="let items of product">
             <div class="card" style="width: 18rem;">
-                <img src="https://www.thegioiiphone.vn/wp-content/uploads/2023/03/iphone-14-pro-purple-thumb-650x650-1.webp"
-                    class="card-img-top" alt="...">
+                <a [routerLink]="['/product',items.id]" *ngFor="let item of items.images"> <img src={{item.base_url}}
+                        class="card-img-top" alt="..."></a>
                 <p class="cart-item">Trả góp 0%</p>
                 <p class="cart-item1">Giảm 7.000.000đ</p>
                 <div class="card-body">
-                    <h5 class="card-title">{{item.name}}</h5>
+                    <h5 class="card-title">{{items.name}}</h5>
                     <div class="d-flex">
-                        <p class="card-text text-danger fs-5 me-5">{{item.price}}đ</p>
-                        <p class="card-text mt-1">{{item.original_price}}đ</p>
+                        <p class="card-text text-danger fs-5 me-5">{{items.price}}đ</p>
+                        <p class="card-text mt-1">{{items.original_price}}đ</p>
                     </div>
-                    <p>Thương hiệu : <label class="text-primary fw-bold"> {{item.brand.name}}</label></p>
-                    <a routerLink="signin" class="btn btn-primary">xem chi tiết</a>
+                    <p>Thương hiệu : <label class="text-primary fw-bold"> {{items.brand.name}}</label></p>
+                    <button (click)="viewDetail(items.id)" class="btn btn-primary">xem chi tiết</button>
                 </div>
             </div>
             <div>
