--- a/src/app/pages/client/detail/detail.component.html
+++ b/src/app/pages/client/detail/detail.component.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <article class="flex">
+    <article class="flex space-x-2">
         <div class="left w-1/2">
 
             <img src="https://i.imgur.com/7QqYgE3.jpg" class="mx-auto w-3/4" alt="">
@@ -106,7 +106,7 @@
                     <b>659.000₫</b>/tháng
                 </div>
             </div>
-            <div class="bg-yellow-100 text-[#ea9d02] w-2/5 pl-1 mt-2 mb-10 rounded-[12px]">
+            <div class="bg-yellow-100 text-[#ea9d02] inline px-2 mt-2 mb-10 rounded-[12px]">
                 <b class="bg-yellow-500 px-1.5 rounded-[50%] text-white">F</b>
                 +1.572 điểm thưởng dự kiến
                 <i class="fa-solid fa-circle-info" style="color: #ea9d02;"></i>
@@ -141,8 +141,8 @@
             </div>
 
             <div class="flex justify-between text-sm">
-                <h2>Gọi <a href="" class="text-red-600 font-medium">1800-6601</a> để được tư vấn mua hàng (Miễn phí)
-                </h2>
+                <p>Gọi <a href="" class="text-red-600 font-medium">1800-6601</a> để được tư vấn mua hàng (Miễn phí)
+                </p>
                 <a href="" class="text-blue-600">
                     <i class="fa-solid fa-location-dot"></i>
                     Tìm shop có cửa hàng gần nhất
