--- a/src/app/pages/client/product/product.component.css
+++ b/src/app/pages/client/product/product.component.css
@@ -13,8 +13,7 @@
     width: 40%;
     padding: 3px;
     border-radius: 0 5px 5px 0;
-    top: 200px;
-
+    top: 160px;
 }
 
 .cart-item1 {
@@ -24,5 +23,15 @@
     width: 50%;
     padding: 3px;
     border-radius: 0 5px 5px 0;
-    top: 240px;
+    top: 194px;
+}
+
+.card img {
+    padding: 30px;
+    transform: scale(1);
+    transition: all 0.5s;
+}
+
+.card img:hover {
+    transform: scale(1.1);
 }
