--- a/src/app/pages/client/detail/detail.component.html
+++ b/src/app/pages/client/detail/detail.component.html
@@ -32,7 +32,7 @@
     <article class="flex">
         <div class="left w-1/2">
 
-            <img src="https://i.imgur.com/7QqYgE3.jpg" class="mx-auto w-3/4" alt="">
+            <img [src]="product.images[0].base_url" class="mx-auto w-3/4" alt="">
 
             <div class="flex justify-center space-x-5">
                 <div class="text-center">
@@ -113,11 +113,11 @@
             </div>
             <div class=" grid grid-cols-10 gap-1">
                 <div class="text-center">
-                    <img src="https://i.imgur.com/7QqYgE3.jpg" class="" alt="">
+                    <img [src]="product.images[0].large_url" class="" alt="">
                     <p>Xanh</p>
                 </div>
                 <div class="text-center">
-                    <img src="https://i.imgur.com/7QqYgE3.jpg" class="" alt="">
+                    <img [src]="product.images[0]. large_url" class="" alt="">
                     <p>Đen</p>
                 </div>
             </div>
