--- a/src/app/pages/client/detail/detail.component.html
+++ b/src/app/pages/client/detail/detail.component.html
@@ -99,7 +99,7 @@
         <div class="right w-1/2">
             <div class="flex justify-between">
                 <h1 class="text-3xl font-semibold text-red-700">
-                    {{product.price}}đ
+                    {{VND.format(product.price)}}
                 </h1>
                 <div class="text-sm text-right">
                     Trả góp chỉ từ <br>
@@ -165,9 +165,9 @@
             <h1 class="text-2xl text-center">
                 Đánh giá chi tiết {{product.name}}
             </h1>
-            <b>
-                {{product.description}}
-            </b>
+            <div>
+                {{ product.description }}
+            </div>
             <img src="https://i.imgur.com/yyRk2Rc.jpg" alt="">
             <button class="bg-blue-300 text-white p-1 rounded-md my-2">Xem thêm</button>
         </div>
