--- a/src/app/pages/client/sign-up/sign-up.component.html
+++ b/src/app/pages/client/sign-up/sign-up.component.html
@@ -1,15 +1,19 @@
-
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<script
+	type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <section>
 	<div class="main-w3layouts wrapper">
-		<h1>Creative SignUp Form</h1>
+		<h1> SignUp </h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
-    			<form  (ngSubmit)="onSubmit()">
-					<input class="text" type="text"   [(ngModel)]="user.name" name="Username" placeholder="Username" required="">
-					<input class="text email" type="email" name="email" [(ngModel)]="user.email" placeholder="Email" required="">
-					<input class="text" type="password" name="password"  [(ngModel)]="user.password" placeholder="Password" required="">
-					<input class="text w3lpass" type="password" name="Confirmpassword"  [(ngModel)]="user.Confirmpassword" placeholder="Confirm Password" required="">
+				<form (ngSubmit)="onSubmit()">
+					<input class="text" type="text" [(ngModel)]="user.name" name="Username" placeholder="Username"
+						required="">
+					<input class="text email" type="email" name="email" [(ngModel)]="user.email" placeholder="Email"
+						required="">
+					<input class="text" type="password" name="password" [(ngModel)]="user.password"
+						placeholder="Password" required="">
+					<input class="text w3lpass" type="password" name="Confirmpassword"
+						[(ngModel)]="user.Confirmpassword" placeholder="Confirm Password" required="">
 					<div class="wthree-text">
 						<label class="anim">
 							<input type="checkbox" class="checkbox" required="">
@@ -19,14 +23,15 @@
 					</div>
 					<input type="submit" value="SIGN UP">
 				</form>
-				<p>Don't have an Account? <a href="/signin" > Login Now!</a></p>
+				<p>Don't have an Account? <a href="/signin"> Login Now!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
 		<div class="colorlibcopy-agile">
-			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
+			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/"
+					target="_blank">Colorlib</a></p>
 		</div>
-		
+
 		<ul class="colorlib-bubbles">
 			<li></li>
 			<li></li>
