update : signin+signup

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,12 +24,12 @@
                     Thanh toán & tiện ích
                 </p>
             </div>
-            <div class="text-center">
+            <a routerLink="signin" class="text-center">
                 <i class="fa-solid fa-user fa-lg" style="color: #ffffff;"></i>
                 <p class="text-[#ffffff]">
                     Tài khoản của tôi
                 </p>
-            </div>
+            </a>
             <div class="text-center">
                 <i class="fa-sharp fa-solid fa-cart-shopping fa-lg" style="color: #ffffff;"></i>
                 <p class="text-[#ffffff]">
