--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="bg-black  text-white ">
+<div class="bg-black  text-white " ng>
     <nav class="flex justify-around md:container md:mx-auto mx-auto h-[36px]">
         <div class="flex items-center space-x-1">
             <i class="fa-solid fa-mobile "></i>
