update:create blog page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
             <div class="text-center">
                 <i class="fa-solid fa-file-lines fa-lg" style="color: #ffffff;"></i>
                 <p class="text-[#ffffff]">
-                    Thông tin hay
+                    <a href="/blog" class="text-decoration-none text-light">Thông tin hay</a>
                 </p>
 
 
