--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class=" bg-[#cd1817] ">
     <div class="flex justify-between h-[56px] p-[10px] items-center md:container md:mx-auto mx-auto">
-        <a href="" class="text-[#ffffff] text-3xl">HOME</a>
+        <a routerLink="" class="text-[#ffffff] text-3xl">HOME</a>
 
         <div class="flex">
             <input type="text" placeholder="Nhập tên sản phẩm" class="h-[38px] w-[400px] p-2 rounded-l-sm outline-none">
