--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -6,3 +6,17 @@
     color: black;
     text-decoration: underline;
 }
+
+@media(min-width:768px) {
+
+    .footer-item {
+        display: none;
+    }
+}
+
+@media(min-width:1024pc) {
+
+    .footer-item {
+        display: none;
+    }
+}
