--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <section class="container-xxl footer ">
-    <div class="row">
+    <h4 class="footer-item">Các thông tin khác</h4>
+    <div class="row ">
         <div class="text-primary col">
             <a href="#">
                 <p>Giới thiệu về công ty</p>
