--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class=" bg-[#cd1817] ">
-    <div class="flex justify-between h-[56px] p-[10px] items-center md:container md:mx-auto mx-auto">
+    <div class=" header flex justify-between h-[56px] p-[10px] items-center md:container md:mx-auto mx-auto">
         <a routerLink="" class="text-[#ffffff] text-3xl">HOME</a>
 
         <div class="flex">
