--- a/src/app/pages/client/product/product.component.html
+++ b/src/app/pages/client/product/product.component.html
@@ -1,7 +1,7 @@
 <section class="container-xxl mt-3 mb-3">
     <h2>Điện thoại nổi bật</h2>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col" *ngFor="let items of product">
+    <div class="products">
+        <div class="product " *ngFor="let items of product">
             <div class="card" style="width: 18rem;">
                 <a (click)="gotoTop()" [routerLink]="['/product',items.id]"> <img [src]="items.images[0].base_url"
                         class="card-img-top" alt="image sản phẩm"></a>
