--- a/src/app/pages/client/sign-up/sign-up.component.html
+++ b/src/app/pages/client/sign-up/sign-up.component.html
@@ -7,80 +7,42 @@
 					<div class="card" style="border-radius: 15px;">
 						<div class="card-body p-5">
 							<h2 class="text-uppercase text-center mb-5">Create an account</h2>
-							<form [formGroup]="signupform" (ngSubmit)="onSubmit()" novalidate>
-								<div class="form-outline mb-4">
-									<label class="form-label " for="form3Example1cg">Your Name</label>
-									<input type="text" required id="form3Example1cg" formControlName="name"
-										[ngClass]="{'is-invalid': submited && name  && name.invalid }" name="Username"
-										placeholder="Username" class="form-control  form-control-lg" />
-									<!-- show errer -->
-									<div class="text-danger">
-										<i *ngIf="submited && name && name.invalid "
-											class="fa fa-times text-danger"></i>
-										<span *ngIf="submited && name && name.invalid ">
-											Name is required
-										</span>
 
-									</div>
+							<form (ngSubmit)="onSubmit()">
+
+								<div class="form-outline mb-4">
+									<label class="form-label" for="form3Example1cg">Your Name</label>
+									<input type="text" id="form3Example1cg" [(ngModel)]="user.name" name="Username"
+										placeholder="Username" class="form-control form-control-lg" />
 								</div>
+
 								<div class="form-outline mb-4">
 									<label class="form-label" for="form3Example3cg">Your Email</label>
-									<input type="email" name="email" formControlName="email" placeholder="Email"
-										[ngClass]="{'is-invalid': submited && email  && email.invalid }"
+									<input type="email" name="email" [(ngModel)]="user.email" placeholder="Email"
 										id="form3Example3cg" class="form-control form-control-lg" />
-									<!-- show errer -->
-									<div class="text-danger">
-										<i *ngIf="submited && email && email.invalid "
-											class="fa fa-times text-danger"></i>
-										<span *ngIf="submited && email && email.invalid ">
-											email is required
-										</span>
-
-									</div>
-
 								</div>
 
 								<div class="form-outline mb-4">
 									<label class="form-label" for="form3Example4cg">Password</label>
-									<input type="password" name="password" formControlName="password"
+									<input type="password" name="password" [(ngModel)]="user.password"
 										placeholder="Password" id="form3Example4cg"
-										[ngClass]="{'is-invalid': submited && password  && password.invalid }"
 										class="form-control form-control-lg" />
-									<!-- show errer -->
-									<div class="text-danger">
-										<i *ngIf="submited && password && password.invalid "
-											class="fa fa-times text-danger"></i>
-										<span *ngIf="submited && password && password.invalid ">
-											password is required
-										</span>
-
-									</div>
 								</div>
 
 								<div class="form-outline mb-4">
 									<label class="form-label" for="form3Example4cdg">Repeat your password</label>
-									<input type="password" placeholder="Confirm Password"
-										formControlName="Confirmpassword"
-										[ngClass]="{'is-invalid': submited && Confirmpassword  && Confirmpassword.invalid }"
-										id="form3Example4cdg" class="form-control form-control-lg" />
-									<!-- show errer -->
-									<div class="text-danger">
-										<i *ngIf="submited && Confirmpassword && Confirmpassword.invalid "
-											class="fa fa-times text-danger"></i>
-										<span *ngIf="submited && Confirmpassword && Confirmpassword.invalid ">
-											Confirmpassword is required
-										</span>
-
-									</div>
+									<input type="password" name="Confirmpassword" [(ngModel)]="user.Confirmpassword"
+										placeholder="Confirm Password" id="form3Example4cdg"
+										class="form-control form-control-lg" />
 								</div>
 
 								<div class="form-check d-flex justify-content-center mb-5">
-
-									<input class="form-check-input me-2" type="checkbox" value="" id="form2Example3g" />
 									<label class="form-check-label" for="form2Example3g">
 										I agree all statements in <a href="#!" class="text-body"><u>Terms of
 												service</u></a>
 									</label>
+									<input class="form-check-input me-2" type="checkbox" value="" id="form2Example3g" />
+
 								</div>
 
 								<div class="d-flex justify-content-center">
@@ -95,6 +57,7 @@
 										routerLink="/signin" class="fw-bold text-body"><u>Login here</u></a></p>
 
 							</form>
+
 						</div>
 					</div>
 				</div>
