--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,8 +1,28 @@
 /* css */
-* {
-    margin: 0;
-}
 
 a {
     text-decoration: none;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.nav-mb {
+    display: block;
+}
+
+.nav-pc {
+    display: none;
+}
+
+@media (min-width:1024px) {
+    .nav-mb {
+        display: none;
+    }
+
+    .nav-pc {
+        display: block;
+    }
 }
