--- a/src/app/pages/client/detail/detail.component.html
+++ b/src/app/pages/client/detail/detail.component.html
@@ -2,7 +2,7 @@
     Trang chủ / Điện thoại / {{product.name}}
 </div>
 <div class="container mx-auto">
-    <div class="flex justify-between items-center">
+    <div class="md:flex justify-between items-center flex-row mb-2">
         <h1 class="text-2xl font-semibold">
             {{product.name}}
         </h1>
@@ -29,10 +29,10 @@
         </div>
     </div>
 
-    <article class="flex space-x-2">
-        <div class="left w-1/2">
+    <article class="md:flex space-x-2 flex-row">
+        <div class="left md:w-1/2 w-full">
 
-            <img [src]="product.images[0].base_url" class="mx-auto w-3/4" alt="">
+            <img [src]="product.image" class="mx-auto w-3/4 mb-2" alt="">
 
             <div class="flex justify-center space-x-5">
                 <div class="text-center">
@@ -96,7 +96,7 @@
                 <a href="" class="text-blue-600">Xem chi tiết thông số kĩ thuật</a>
             </div>
         </div>
-        <div class="right w-1/2">
+        <div class="right md:w-1/2 w-full">
             <div class="flex justify-between">
                 <h1 class="text-3xl font-semibold text-red-700">
                     {{VND.format(product.price)}}
@@ -113,11 +113,11 @@
             </div>
             <div class=" grid grid-cols-10 gap-1">
                 <div class="text-center">
-                    <img [src]="product.images[0].large_url" class="" alt="">
+                    <img [src]="product.image" class="" alt="">
                     <p>Xanh</p>
                 </div>
                 <div class="text-center">
-                    <img [src]="product.images[0]. large_url" class="" alt="">
+                    <img [src]="product.image" class="" alt="">
                     <p>Đen</p>
                 </div>
             </div>
@@ -156,8 +156,8 @@
 
     </article>
 
-    <article class="flex justify-between">
-        <div class="w-[60%] p-3 border rounded-md shadow-sm">
+    <article class="md:flex justify-between flex-row">
+        <div class="md:w-[60%] w-full p-3 border rounded-md shadow-sm">
             <h1 class="text-2xl">
                 Đặc điểm nổi bật của {{product.name}}
             </h1>
@@ -171,7 +171,7 @@
             <img src="https://i.imgur.com/yyRk2Rc.jpg" alt="">
             <button class="bg-blue-300 text-white p-1 rounded-md my-2">Xem thêm</button>
         </div>
-        <div class="w-[38%] p-3 border rounded-md shadow-sm max-h-[500px]">
+        <div class="md:w-[38%] flex-row p-3 border rounded-md shadow-sm max-h-[500px]">
             <h1 class="text-2xl text-center">
                 Thông số kĩ thuật
             </h1>
@@ -245,7 +245,7 @@
         <h1 class="text-2xl ">
             Đánh giá sản phẩm
         </h1>
-        <div class="flex justify-around">
+        <div class="md:flex justify-around flex-row">
             <div class="text-center">
 
                 <h2>Đánh giá trung bình</h2>
