--- a/src/app/pages/client/sign-in/sign-in.component.html
+++ b/src/app/pages/client/sign-in/sign-in.component.html
@@ -24,7 +24,7 @@
 
       </div>
       <input type="submit" value="SIGN IN" id="submit">
-      <p class="message">Not registered? <a href="signup">Create an account</a></p>
+      <p class="message">Not registered? <a routerLink="/signup" (click)="gotoTop()">Create an account</a></p>
     </form>
   </div>
 </div>
