--- a/src/app/pages/client/sign-up/sign-up.component.html
+++ b/src/app/pages/client/sign-up/sign-up.component.html
@@ -92,7 +92,7 @@
 								</div>
 
 								<p class="text-center text-muted mt-5 mb-0">Have already an account? <a
-										routerLink="/signin" class="fw-bold text-body"><u>Login here</u></a></p>
+										routerLink="/signin" (click)="gotoTop()" class="fw-bold text-body"><u>Login here</u></a></p>
 
 							</form>
 						</div>
