--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,5 @@
 <app-slider></app-slider>
-<app-product></app-product>
+<div class="flex container">
+    <app-category class="w-[20%]"></app-category>
+    <app-product class="w-[78%]"></app-product>
+</div>
