--- a/src/app/pages/client/product/product.component.html
+++ b/src/app/pages/client/product/product.component.html
@@ -2,8 +2,8 @@
     <h2>Điện thoại nổi bật</h2>
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col" *ngFor="let product of products; let i = index">
-            <div class="card" style="width: 18rem;">
-                <a (click)="gotoTop()" [routerLink]="['/product',product.id]"> <img [src]="product.image"
+            <div class="card" style="width: 15rem;">
+                <a (click)="gotoTop()" [routerLink]="['/product',product._id]"> <img [src]="product.image"
                         class="card-img-top" alt="image sản phẩm"></a>
                 <p class="cart-item">Trả góp 0%</p>
                 <p class="cart-item1">Giảm 7.000.000đ</p>
