update :create layout admin

--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<div class="container-xxl">
+    <app-header-admin></app-header-admin>
+    <div class="row row-cols-2">
+        <app-categorys class="col-2"></app-categorys>
+        <app-list-products class="col-10"></app-list-products>
+    </div>
+</div>
