--- a/src/app/pages/admin/header-admin/header-admin.component.html
+++ b/src/app/pages/admin/header-admin/header-admin.component.html
@@ -1,1 +1,14 @@
-<p>header-admin works!</p>
+<header class="header container-xxl d-flex justify-content-between">
+    <a href="/admin" class="text-decoration-none">
+        <h3 class="text-danger fs-4 mt-3 ms-2 me-5">Nhom3</h3>
+    </a>
+    <p class="mt-3 text-danger">dashbroad</p>
+    <input type="text" placeholder="search" class="form-control" class="mt-2">
+    <div class="mt-3">
+        Xin chào :Đinh Công Thản
+    </div>
+    <div class="d-flex me-5 mt-2 mb-2">
+        <!-- <img width="50" height="50" src="https://img.icons8.com/bubbles/50/user.png" alt="user" /> -->
+        <img width="24" height="24" src="https://img.icons8.com/material-outlined/24/exit.png" alt="exit" />
+    </div>
+</header>
