--- a/src/app/layout/layout-admin/list-products/list-products.component.html
+++ b/src/app/layout/layout-admin/list-products/list-products.component.html
@@ -14,20 +14,19 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Sản phẩm a</td>
-                <td>200000</td>
-                <td>30000</td>
-                <td><img src="https://www.techone.vn/wp-content/uploads/2022/09/14-prm-den-1.jpg" width="50px" alt="">
+            <tr *ngFor="let item of products">
+                <td>{{item.name}}</td>
+                <td>{{item.price}}</td>
+                <td>{{item.original_price}}</td>
+                <td><img src={{item.image}} alt="">
                 </td>
-                <td>hahaha</td>
-                <td>Apple</td>
+                <td>{{item.description}}</td>
+                <td>{{item.salient_features}}</td>
                 <td>
                     <a href="/admin/update-product"><span class="material-symbols-outlined me-2">edit</span></a>
-                    <button><span class="material-symbols-outlined">delete</span></button>
-
+                    <button (click)="handleDelete(item._id)"><span
+                            class="material-symbols-outlined">delete</span></button>
                 </td>
-
             </tr>
         </tbody>
     </table>
