--- a/src/app/pages/client/detail/detail.component.html
+++ b/src/app/pages/client/detail/detail.component.html
@@ -106,7 +106,7 @@
                     <b>659.000₫</b>/tháng
                 </div>
             </div>
-            <div class="bg-yellow-100 text-[#ea9d02] inline px-2 mt-2 mb-10 rounded-[12px]">
+            <div class="bg-yellow-100 text-[#ea9d02] inline px-2 my-2 mb-10 rounded-[12px]">
                 <b class="bg-yellow-500 px-1.5 rounded-[50%] text-white">F</b>
                 +1.572 điểm thưởng dự kiến
                 <i class="fa-solid fa-circle-info" style="color: #ea9d02;"></i>
