--- a/src/app/layout/layout-admin/categorys/categorys.component.html
+++ b/src/app/layout/layout-admin/categorys/categorys.component.html
@@ -1,5 +1,5 @@
 <div class="">
-    <a href="/admin" class="cate text-decoration-none text-dark">
+    <a routerLink="/admin" class="cate text-decoration-none text-dark">
         <div class="cate-item d-flex gap-1 mt-2 ">
             <span class="material-symbols-outlined">
                 inventory_2
@@ -7,7 +7,7 @@
             <p className="">Products</p>
         </div>
     </a>
-    <a href="/admin" class="cate text-decoration-none text-dark">
+    <a routerLink="/admin" class="cate text-decoration-none text-dark">
         <div class="cate-item d-flex gap-1 mt-2 ">
             <span class="material-symbols-outlined">
                 inventory_2
@@ -15,7 +15,7 @@
             <p className="">Categorys</p>
         </div>
     </a>
-    <a href="/admin/accounts" class="cate text-decoration-none text-dark">
+    <a routerLink="/admin/accounts" class="cate text-decoration-none text-dark">
         <div class="cate-item d-flex gap-1 mt-2 ">
             <span class="material-symbols-outlined">
                 account_circle
@@ -23,7 +23,7 @@
             <p className="">Account</p>
         </div>
     </a>
-    <a href="/admin/brands" class="cate text-decoration-none text-dark">
+    <a routerLink="/admin/brands" class="cate text-decoration-none text-dark">
         <div class="cate-item d-flex gap-1 mt-2 ">
             <span class="material-symbols-outlined">
                 category
