--- a/src/app/layout/layout-admin/list-brands/list-brands.component.html
+++ b/src/app/layout/layout-admin/list-brands/list-brands.component.html
@@ -9,18 +9,20 @@
                 <table class=" table table-bordered table-responsive">
                     <thead>
                         <tr>
+                            <td>#</td>
                             <th>Name</th>
                             <th>Thao tác</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Sản phẩm a</td>
+                        <tr *ngFor="let item of categories;index as i">
+                            <td>{{i+1}}</td>
+                            <td>{{item.name}}</td>
                             <td>
-                                <a href="/admin/update-product"><span
-                                        class="material-symbols-outlined me-2">edit</span></a>
-                                <button><span class="material-symbols-outlined">delete</span></button>
-
+                                <a [routerLink]="['/admin/update-brand/', item._id]">
+                                    <span class="material-symbols-outlined me-2">edit</span></a>
+                                <button (click)="OnhandleDelete(item._id)"><span
+                                        class="material-symbols-outlined">delete</span></button>
                             </td>
 
                         </tr>
