--- a/src/app/pages/admin/header-admin/header-admin.component.html
+++ b/src/app/pages/admin/header-admin/header-admin.component.html
@@ -5,10 +5,11 @@
     <p class="mt-3 text-danger">dashbroad</p>
     <input type="text" placeholder="search" class="form-control" class="mt-2">
     <div class="mt-3">
-        Xin chào :Đinh Công Thản
+        Xin chào : Đinh Công Thản
     </div>
-    <div class="d-flex me-5 mt-2 mb-2">
-        <!-- <img width="50" height="50" src="https://img.icons8.com/bubbles/50/user.png" alt="user" /> -->
-        <img width="24" height="24" src="https://img.icons8.com/material-outlined/24/exit.png" alt="exit" />
+    <div class="d-flex me-5 mt-3 mb-3">
+        <span class="material-symbols-outlined">
+            logout
+        </span>
     </div>
 </header>
