update:add products

--- a/src/app/layout/layout-admin/list-products/list-products.component.html
+++ b/src/app/layout/layout-admin/list-products/list-products.component.html
@@ -9,7 +9,7 @@
                 <th>Orinal_price</th>
                 <th>Image</th>
                 <th>Description</th>
-                <th>Brand</th>
+                <th>salient_features</th>
                 <th>Thao tác</th>
             </tr>
         </thead>
