update : upload image

--- a/src/app/layout/layout-admin/add-products/add-products.component.html
+++ b/src/app/layout/layout-admin/add-products/add-products.component.html
@@ -23,7 +23,9 @@
                     </div>
                     <div>
                         <label for="" class="form-lable mb-2">Image</label>
-                        <input type="file" class="form-control" formControlName="image">
+                        <input type="file" class="form-control file-upload" (change)="HandleGetfile($event)" #fileUpload
+                            onchange="console.log(event.target.files)" formControlName="image">
+
                     </div>
                     <div>
                         <label for="" class="form-lable mb-2">description</label>
