--- a/src/app/pages/client/sign-up/sign-up.component.html
+++ b/src/app/pages/client/sign-up/sign-up.component.html
@@ -23,6 +23,23 @@
 
 									</div>
 								</div>
+
+								<div class="form-outline mb-4">
+									<label class="form-label " for="form3Example1cg">Your Number</label>
+									<input type="text" required id="form3Example1cg" formControlName="number"
+										[ngClass]="{'is-invalid': submited && number  && number.invalid }" name="number"
+										placeholder="Username" class="form-control  form-control-lg" />
+									<!-- show errer -->
+									<div class="text-danger">
+										<i *ngIf="submited && number && number.invalid "
+											class="fa fa-times text-danger"></i>
+										<span *ngIf="submited && number && number.invalid ">
+											number is required
+										</span>
+
+									</div>
+								</div>
+
 								<div class="form-outline mb-4">
 									<label class="form-label" for="form3Example3cg">Your Email</label>
 									<input type="email" name="email" formControlName="email" placeholder="Email"
@@ -92,7 +109,8 @@
 								</div>
 
 								<p class="text-center text-muted mt-5 mb-0">Have already an account? <a
-										routerLink="/signin" (click)="gotoTop()" class="fw-bold text-body"><u>Login here</u></a></p>
+										routerLink="/signin" (click)="gotoTop()" class="fw-bold text-body"><u>Login
+											here</u></a></p>
 
 							</form>
 						</div>
