--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,4 @@
 <app-slider></app-slider>
-<div class="flex container">
-    <app-category class="w-[20%]"></app-category>
-    <app-product class="w-[78%]"></app-product>
-</div>
+
+
+<app-product></app-product>
