--- a/src/app/pages/client/product/product.component.html
+++ b/src/app/pages/client/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="w-full text-center">
+<div class="w-full">
     <section class="container-xxl mt-3 mb-3">
         <h2>Điện thoại nổi bật</h2>
         <div class="row row-cols-1 row-cols-md-4 g-4">
@@ -26,6 +26,9 @@
             </div>
         </div>
     </section>
+
+</div>
+<div class="text-center">
     <button class="my-2 bg-red-600 text-white p-2 rounded-md" (click)="increaseLimit()">Load more</button>
 
 </div>
