--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -72,7 +72,7 @@
 
             </div>
             <div (click)="hide()" *ngIf="display"
-                class="z-30 h-[100%] opacity-[0.5] bg-gray-500 absolute top-0 bottom-[0%] right-0 left-0">
+                class="z-30 h-[100%] opacity-[0.5] bg-gray-500 fixed top-0 bottom-[0%] right-0 left-0">
 
             </div>
 
