fix admin + sort

--- a/src/app/layout/layout-admin/list-products/list-products.component.html
+++ b/src/app/layout/layout-admin/list-products/list-products.component.html
@@ -1,12 +1,12 @@
 <div class="">
     <h2>Danh sách sản phẩm</h2>
     <a routerLink="/admin/add-product" class="btn btn-primary mb-4">Thêm sản phẩm</a>
-    <div class="space-x-1">
+    <!-- <div class="space-x-1">
         <button class="bg-cyan-400 w-8 text-white p-1 rounded-md" [disabled]="currentPage === 1" (click)="prevPage()"><i
                 class="fa-solid fa-chevron-left"></i></button>
         <button class="bg-cyan-400 w-8 text-white p-1 rounded-md" [disabled]="currentPage === totalPages"
             (click)="nextPage()"><i class="fa-solid fa-chevron-right"></i></button>
-    </div>
+    </div> -->
     <table class=" table table-bordered table-responsive">
         <thead>
             <tr>
@@ -20,7 +20,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of pagedItemList">
+            <tr *ngFor="let item of products|slice:startIndex:endIndex">
                 <td>{{item.name}}</td>
                 <td>{{item.price}}</td>
                 <td>{{item.original_price}}</td>
@@ -37,10 +37,21 @@
             </tr>
         </tbody>
     </table>
-    <div class="space-x-1">
-        <button class="bg-cyan-400 w-8 text-white p-1 rounded-md" [disabled]="currentPage === 1" (click)="prevPage()"><i
+    <div class="pagination flex">
+        <button (click)="prevPage();gotoTop()" class="bg-cyan-400 w-8 text-white p-1 rounded-md"><i
                 class="fa-solid fa-chevron-left"></i></button>
+        <ng-container *ngFor="let page of pages">
+            <button class="outline-none  w-8 border p-1 rounded-md " (click)="goToPage(page)" (click)="gotoTop()"
+                [class.active]="currentPage === page">{{ page }}</button>
+        </ng-container>
+        <button (click)="nextPage();gotoTop()" class="bg-cyan-400 w-8 text-white p-1 rounded-md"><i
+                class="fa-solid fa-chevron-right"></i></button>
+    </div>
+    <!-- <div class="space-x-1">
+        <button class="bg-cyan-400 w-8 text-white p-1 rounded-md" [disabled]="currentPage === 1" (click)="prevPage()">
+            <i class="fa-solid fa-chevron-left"></i>
+            </button>
         <button class="bg-cyan-400 w-8 text-white p-1 rounded-md" [disabled]="currentPage === totalPages"
             (click)="nextPage()"><i class="fa-solid fa-chevron-right"></i></button>
-    </div>
+    </div> -->
 </div>
