creat html cart + update menu +update notfound

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -26,3 +26,15 @@ a {
         display: block;
     }
 }
+
+/* .show {
+    pointer-events: none;
+} */
+
+/* .show:hover {
+    pointer-events: auto;
+} */
+
+.show:hover .auth {
+    display: block;
+}
