--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="bg-black  text-white " ng>
-    <nav class="flex justify-around md:container md:mx-auto mx-auto h-[36px]">
+    <nav class="flex justify-around container md:mx-auto mx-auto h-[36px]">
         <div class="flex items-center space-x-1">
             <i class="fa-solid fa-mobile "></i>
             <p>ĐIỆN THOẠI</p>
