--- a/src/app/pages/admin/header-admin/header-admin.component.html
+++ b/src/app/pages/admin/header-admin/header-admin.component.html
@@ -5,11 +5,11 @@
     <p class="mt-3 text-danger">dashbroad</p>
     <input type="text" placeholder="search" class="form-control" class="mt-2">
     <div class="mt-3">
-        Xin chào : Đinh Công Thản
+        Xin chào : {{user.name}}
     </div>
     <div class="d-flex me-5 mt-3 mb-3">
-        <span class="material-symbols-outlined">
+        <button routerLink="/" class="material-symbols-outlined">
             logout
-        </span>
+        </button>
     </div>
 </header>
